# Cat-Activity

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  assets_config.json  build.gradle.kts  builder.json  builder.schema.json  builder_config.json  gradle.properties  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  qodana.yml  settings.gradle.kts  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-assets.yml  build.yml  codeql.yml  generate.yml  icons-pr.yml  icons.yml  issues.yml  publish.yml  release.yml  run-ui-tests.yml
.run/: Run Plugin.run.xml  Run Verifications.run.xml
generate/: builder.ts  code_generation.ts  config.ts  config_validator.ts  consts.ts  generate.py  icons.json  index.html  index.ts
generate/steps/: builder.ts  checker.ts  code_generation.ts
gradle/: libs.versions.toml
src/main/kotlin/cat/wavy/catactivity/: CatActivity.kt  Consts.kt  MyBundle.kt
src/main/kotlin/cat/wavy/catactivity/action/: ReloadAction.kt  SelectDisableActivity.kt  SelectOnlyIDE.kt  SelectShowProject.kt  SelectShowProjectAndFiles.kt  ToggleAction.kt  WelcomeAction.kt
src/main/kotlin/cat/wavy/catactivity/actions/: WelcomeAction.kt
src/main/kotlin/cat/wavy/catactivity/bundle/: ConfigBundle.kt  ToolsBundle.kt
src/main/kotlin/cat/wavy/catactivity/listener/: EditingListeners.kt
src/main/kotlin/me/rerere/discordij/: DiscordIJ.kt
src/main/resources/messages/: ConfigBundle.properties  ConfigBundle_en.properties  MyBundle.properties  ToolsBundle.properties
(+30 files in other folders)
